# talentscope-engine

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  commit_changes.sh  docker-compose.yml  pyproject.toml  requirements.txt
talentscope/: api.py  cli.py  config.py
talentscope/core/: experience.py  hr_metrics.py  hr_scorer.py  job_parser.py  matcher.py  normalize.py  parser.py  scoring.py
talentscope/data/: salaries.csv
talentscope/db/: database.py  models.py  mongo_client.py
talentscope/io/: extractors.py  minio_client.py  salary.py
talentscope/jobs/: job.txt
talentscope/pipeline/: __init__.py  pipeline.py
talentscope/results/: job_rankings.json
talentscope/skills/: skills.yaml  skills_loader.py
talentscope_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
